# watsonx-mcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  runner.json
.github/workflows/: ci.yml
docs/: INGESTION_TROUBLESHOOTING.md  INSTALL_LOCAL.md  INSTALL_MATRIXHUB.md  MANIFEST_NOTES.md  README.md  SNIPPET_QUICK_VERIFY.md
manifests/: watsonx-tool.manifest.json  watsonx.manifest-v2.json  watsonx.manifest.json
runners/connector/: runner.json
scripts/bash/: 00_set_env_example.sh  10_venv_setup.sh  20_install_id_only.sh  21_install_inline.sh  30_run_alias.sh  40_probe_alias.sh  50_call_tool_alias.sh  51_call_tool_url.sh  90_doctor.sh  91_logs_follow.sh  92_stop.sh  e2e_install_inline_and_run.sh  hub_e2e_inline_and_verify.sh  hub_env_example.sh  hub_install_id_only.sh  hub_install_inline.sh  hub_probe_sse.sh  hub_verify_gateway.sh  poc_full_demo.sh
watsonx_mcp/: app.py
